[project]
dependencies = [
  "click>=8.1.8",
  "promptic>=4.0.1",
  "rich>=13.9.4",
  "ruamel-yaml>=0.18.8",
]
description = "Describe what you want done in your terminal, and Skeet will use AI to make it happen."
name = "skeet"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
version = "0.5.0"

[project.urls]
"Source" = "https://github.com/knowsuchagency/skeet"

[project.scripts]
skeet = "skeet:main"
